# Nidhogg

./: README.md  README_EN.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
nidhogg-marketplace/.claude-plugin/: marketplace.json
nidhogg-marketplace/nidhogg/: .mcp.json
nidhogg-marketplace/nidhogg/.claude-plugin/: plugin.json
nidhogg-marketplace/nidhogg/commands/: save.md
nidhogg-mcp/: mcp.json  pyproject.toml
nidhogg-mcp/src/nidhogg_mcp/: __main__.py  server.py
nidhogg-mcp/src/nidhogg_mcp/commands/: save_conversation.py
nidhogg-mcp/src/nidhogg_mcp/models/: meta.py
nidhogg-mcp/src/nidhogg_mcp/writers/: __init__.py  base.py  files.py  markdown.py
prd/: prd.md
