[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nidhogg-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.24.0",
    "pydantic>=2.12.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nidhogg_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/nidhogg_mcp", "README.md"]
